# digest

./: .gitignore  README.md  encoder.py  pyproject.toml  test.xml
