[tool.poetry]
name = "x509enc"
version = "0.1.0"
description = ""
authors = ["piotr.swiecik <piotr.swiecik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
cryptography = "^39.0.0"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
